# ---
# tags: cw-cyber, config
# crystal-type: source
# crystal-domain: cyber
# ---
[package]
name = "graph-filter"
version = "1.0.0"
authors = ["CyberHead"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
cyber-std = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
